--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <!-- Шапка сайту -->
+
     <header class="header">
       <div class="container header-flex">
         <nav class="header-nav">
@@ -34,15 +35,24 @@
         <ul class="auth-list">
           <li class="auth-item">
             <a class="auth-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              ><svg class="auth-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-envelope">
+                  
+                </use>
+              </svg>info@devstudio.com</a>
+
           </li>
           <li class="auth-item">
-            <a class="auth-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="auth-link" href="tel:+380961111111">
+              <svg class="auth-icon" width="16" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
+
+    <!-- Секція наші проекти -->
 
     <main>
       <section class="project">
@@ -221,8 +231,12 @@
     </main>
 
     <!-- Футер -->
+    
     <footer class="footer">
       <div class="container">
+        <div class="footer-block">
+
+          <div class="footer-block-address">
         <a class="footer-logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
@@ -234,6 +248,47 @@
           >
           <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+          </div>
+
+          <div class="footer-block-social">
+            <p class="footer-block-social-text">приєднуйтесь</p>
+            <ul class="footer-block-social-list">
+              <li class="footer-block-social-item">
+                <a class="footer-block-social-link" href="">
+                  <svg class="footer-block-social-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="footer-block-social-item">
+                <a class="footer-block-social-link" href="">
+                  <svg class="footer-block-social-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="footer-block-social-item">
+                <a class="footer-block-social-link" href="">
+                  <svg class="footer-block-social-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="footer-block-social-item">
+                <a class="footer-block-social-link" href="">
+                  <svg class="footer-block-social-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+
+            </ul>
+          </div>
+
+        </div>
       </div>
     </footer>
   </body>
