--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,15 @@
     <header class="header">
       <div class="container header-flex">
         <nav class="header-nav">
-          <a class="logo" href="./index.html"
-            ><span class="logo-accent">Web</span>Studio</a
-          >
+          <a class="logo" href="./index.html"></a>
+            <span class="logo-accent">Web</span>
+            Studio
+          </a>
 
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Студія</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">Портфоліо</a>
             </li>
@@ -34,19 +37,20 @@
 
         <ul class="auth-list">
           <li class="auth-item">
-            <a class="auth-link" href="mailto:info@devstudio.com"
-              ><svg class="auth-icon" width="16" height="16">
-                <use href="./images/symbol-defs.svg#icon-envelope">
-                  
-                </use>
-              </svg>info@devstudio.com</a>
-
+            <a class="auth-link" href="mailto:info@devstudio.com">
+              <svg class="auth-icon" width="16" height="16">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="auth-item">
             <a class="auth-link" href="tel:+380961111111">
               <svg class="auth-icon" width="16" height="16">
-              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-            </svg>+38 096 111 11 11</a>
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -102,7 +106,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                    Постер
+                    <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
                   <p class="project-text">Дизайн</p>
                 </div>
@@ -119,7 +124,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Ресторан <span lang="en">Seafood</span>
+                    Ресторан
+                    <span lang="en">Seafood</span>
                   </h2>
                   <p class="project-text">Додаток</p>
                 </div>
@@ -136,7 +142,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Проєкт <span lang="en">Prime</span>
+                    Проєкт
+                    <span lang="en">Prime</span>
                   </h2>
                   <p class="project-text">Маркетинг</p>
                 </div>
@@ -153,7 +160,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Проєкт <span lang="en">Boxes</span>
+                    Проєкт
+                    <span lang="en">Boxes</span>
                   </h2>
                   <p class="project-text">Додаток</p>
                 </div>
@@ -187,7 +195,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Видання <span lang="en">Limited Edition</span>
+                    Видання
+                    <span lang="en">Limited Edition</span>
                   </h2>
                   <p class="project-text">Дизайн</p>
                 </div>
@@ -204,7 +213,8 @@
                 />
                 <div class="project-info">
                   <h2 class="project-subtitle">
-                    Проєкт <span lang="en">LAB</span>
+                    Проєкт
+                    <span lang="en">LAB</span>
                   </h2>
                   <p class="project-text">Маркетинг</p>
                 </div>
@@ -231,23 +241,28 @@
     </main>
 
     <!-- Футер -->
-    
+
     <footer class="footer">
       <div class="container">
         <div class="footer-block">
-
           <div class="footer-block-address">
-        <a class="footer-logo" href="./index.html"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <address class="footer-address">
-          <span class="footer-street"> м. Київ, пр-т Лесі Українки, 26</span>
+            <a class="footer-logo" href="./index.html">
+              <span class="logo-accent">Web</span>
+              Studio
+            </a>
+            <address class="footer-address">
+              <span class="footer-street">м. Київ, пр-т Лесі Українки, 26</span>
 
-          <a class="footer-link footer-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+              <a
+                class="footer-link footer-mail"
+                href="mailto:info@devstudio.com"
+              >
+                info@devstudio.com
+              </a>
+              <a class="footer-link" href="tel:+380961111111">
+                +38 096 111 11 11
+              </a>
+            </address>
           </div>
 
           <div class="footer-block-social">
@@ -284,10 +299,8 @@
                   </svg>
                 </a>
               </li>
-
             </ul>
           </div>
-
         </div>
       </div>
     </footer>
